# rockchip

./: .gitignore  CMakeLists.txt  README
docs/: .summary.txt  QUICK_START.md  README.md  UPDATE_20260228_2.md  ap6255_driver_flow.md  platform_device_creation_order.md  wireless_wlan_vs_mmc_pwrseq.md
script/: build_kernel.sh  build_loader.sh  build_uboot.sh
user/docs/: AP6255_FIRMWARE_GUIDE.md  AP6255_WIFI_COMPLETE_GUIDE.md  CORRECTIONS_SUMMARY.md  README.md  bcmdhd_device_tree_matching.md  bcmdhd_vs_brcmfmac_comparison.md  bcmdhd_vs_brcmfmac_performance.md  clion_setup.md  cmake_kernel_indexing.md  full_kernel_indexing.md  pinctrl_auto_apply_mechanism.md  pinctrl_vs_reset_gpios_analysis.md
user/script/: compile.sh  download.sh
user/scripts/: compile.sh  parameter.txt
