cmake_minimum_required(VERSION 3.13)
project(rockchip C CXX)

# Set common flags
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set define
add_definitions(-D__KERNEL__ -DMODULE -DCONFIG_ARM64 -DCONFIG_64BIT -DCONFIG_OF
                -DCONFIG_MMC -DCONFIG_MMC_DW -DCONFIG_MMC_DW_ROCKCHIP
                -DCONFIG_BRCMFMAC -DCONFIG_BRCMFMAC_SDIO -DCONFIG_PINCTRL
                -DCONFIG_PINCTRL_ROCKCHIP)

# Set target includes
set(ROCKCHIP_UBOOT_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/uboot/include)
set(ROCKCHIP_KERNEL_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/kernel/include)
set(ROCKCHIP_INCLUDES ${ROCKCHIP_UBOOT_INCLUDES} ${ROCKCHIP_KERNEL_INCLUDES})

# Set target sources
file(GLOB_RECURSE ROCKCHIP_UBOOT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/uboot/arch/arm/match-rockchip/rk3399/*.c)
list(FILTER ROCKCHIP_UBOOT_SOURCES EXCLUDE REGEX ".*\\.mod\\.c$")
list(FILTER ROCKCHIP_UBOOT_SOURCES EXCLUDE REGEX ".*/\\..*")
file(GLOB_RECURSE ROCKCHIP_KERNEL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/kernel/drivers/mmc/*.c)
list(FILTER ROCKCHIP_KERNEL_SOURCES EXCLUDE REGEX ".*\\.mod\\.c$")
list(FILTER ROCKCHIP_KERNEL_SOURCES EXCLUDE REGEX ".*/\\..*")
set(ROCKCHIP_SOURCES ${ROCKCHIP_UBOOT_SOURCES} ${ROCKCHIP_KERNEL_SOURCES})

# Set target
add_library(rockchip OBJECT ${ROCKCHIP_SOURCES})
target_include_directories(rockchip PRIVATE ${ROCKCHIP_INCLUDES})
target_compile_options(rockchip PRIVATE -Wno-all -Wno-error -fsyntax-only)